# yourdata1

./: .gitignore  DOCKER_TROUBLESHOOTING_ARCH.md  LEGAL_COMPLIANCE.md  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Rocket.toml
backend/sql/: init.sql
backend/src/: main.rs
docs/: AWS_IAM_SETUP.md  CONSENT_AWARE_EVENT_INGESTION_EPIC.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  router.ts  styles.css
frontend/src/pages/: AdminPortalPage.vue  CollectorPage.vue  DataUseExplainerPage.vue
frontend/src/services/: api.ts
lambda/consent-ingress/: Cargo.toml
lambda/consent-ingress/src/: consent.rs  crypto.rs  error.rs  handler.rs  lib.rs  main.rs  models.rs  queue.rs  validation.rs
lambda/consent-ingress/tests/: integration_tests.rs  unit_tests.rs
scripts/: deploy-aws.sh  teardown-aws.sh
